# 2025_next_ml_challenge

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.cursor/rules/: git-commit.mdc
notebooks/: [Baseline]_Sequence LSTM + MLP 기반 CTR 예측.ipynb  lgbm.ipynb  playground.ipynb  ttaro.ipynb  xgboost.ipynb
source/: evaluator.py  prepare.py  train.py
