[project]
name = "2025-next-ml-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair[all]>=5.5.0",
    "catboost>=1.2.8",
    "duckdb>=1.3.2",
    "dvc>=3.63.0",
    "ipykernel>=6.30.1",
    "mlflow>=3.3.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
]
